tests/invalid/integer_literal_underflow.ar
// errc: 8
fn main()
{
    const a: u8 = -1;
    const b: u16 = -1;
    const c: u32 = -1;
    const d: u64 = -1;
    const f: i8 = -129;
    const g: i16 = -32769;
    const h: i32 = -2147483649;
    const i: i64 = -9223372036854775809;
}
